# ucsschool-id-connector

./: .black  .flake8  .gitattributes  .gitignore  .gitlab-ci-docs.yml  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  01_in_container_unittests  02_in_container_integration_tests  Dockerfile  Dockerfile-docs  LICENSE  Makefile  README.rst  _git_hooks_pre-commit  alpine_apk_list  alpine_apk_list.build  alpine_apk_list.runtime  apline_apk_list  build_docker_image  build_provisioning_api_openapi_client  ca-certificates.crt  extensions.rst  renovate.json  requirements.txt  upload_app_settings_and_scripts
src/: HISTORY.rst  LICENSE  README.rst  example_configs.json  example_user.json  example_user_remove.json  listener_trash_cleaner.py  pyproject.toml  queue_management  requirements-dev.txt  requirements.txt  schedule_group  schedule_school  schedule_user  setup.cfg  setup.py
src/id_sync/: config_storage.py  constants.py  db.py  http_api.py  ldap_access.py  models.py  plugin_loader.py  plugins.py  queues.py  rpc.py  school_auth_configuration.py  token_auth.py  user_handler.py  utils.py
src/integration_tests/: conftest.py  test_users.py
src/plugins/plugins/: README.txt  bb_post_processing.py  default_plugin.py  distribution_group_bb.py  distribution_group_kelvin.py  distribution_user.py  example.py  id_broker_distribution.py  id_broker_handlers.py  kelvin_handlers.py  users_bb.py  (+2 more)
src/static/: M2M-Sync_details.drawio  M2M-Sync_overview.drawio  M2M-Sync_overview2.drawio  id_sync_password_hook.py  transformer_plugin_overview.puml  ucsschool-id-connector_details.drawio  ucsschool-id-connector_overview.drawio  ucsschool-id-connector_overview2.drawio  ucsschool_id_connector_password_hook.py
src/tests/: conftest.py  pytest.ini
src/ucsschool_id_connector/: __main__.py  config_storage.py  constants.py  db.py  group_scheduler.py  http_api.py  ldap_access.py  migrations.py  models.py  plugin_loader.py  plugins.py  queues.py  requests.py  rpc.py  school_scheduler.py  token_auth.py  user_handler.py  user_scheduler.py  utils.py
src/unittests/: conftest.py  test_http_api.py  test_plugins.py  test_queues.py  test_rpc.py  test_user_handler.py
(+194 files in other folders)
