[tool.poetry]
name = "ucsschool-id-connector"
version = "3.0.0"
description = "UCS@school ID Connector"
authors = ["UCS School Maintainers <ucsschool-maintainers@univention.de>"]
license = "GNU Affero General Public License v3"
readme = "README.rst"
packages = [
    {include = "ucsschool_id_connector"},
]

[tool.poetry.urls]
homepage = "https://www.univention.de/"
documentation = "https://docs.software-univention.de/ucsschool-id-connector/index.html"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = ">=23.0.0,<24.0.0"
aiohttp = "^3.9.1"
aiojobs = "^1.2.1"
async-lru = "^2.0.4"
async-property = "^0.2.2"
base58 = ">=2.0.1"
click = "^8.1.7"
colorlog = "^6.8.0"
diskcache = "^5.6.3"
fastapi = ">=0.111.0,<0.112.0"
kelvin-rest-api-client = ">=1.7.0"
lazy-object-proxy = ">=1.6.0"
ldap3 = ">=2.9.1,<2.10.0"
pluggy = ">=1.0.0"
pydantic = {version = ">=1.10.9,<1.11.0", extras = ["email"]}
pyjwt = "^2.8.0"
python-multipart = "0.0.9"
requests = ">=2.32.3,<2.33.0"
service = "^0.6.0"
ujson = "5.10.0"
uvicorn = "^0.30.0"
zmq = "^0.0.0"
tenacity = "^8.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = ">=0.23.7,<=0.23.7"
coverage = "*"
factory-boy = "^3.3.0"
faker = ">=18.0.0,<19.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
flake8 = "^3.8.4"
ipython = "*"
isort = "^5.10.1"
pre-commit = "*"

[tool.poetry.scripts]
queue_management = "ucsschool_id_connector.scripts.queue_management:main"
schedule_group = "ucsschool_id_connector.scripts.schedule_group:schedule"
schedule_school = "ucsschool_id_connector.scripts.schedule_school:schedule"
schedule_user = "ucsschool_id_connector.scripts.schedule_user:schedule"
listener_trash_cleaner = "ucsschool_id_connector.scripts.listener_trash_cleaner:run"

[tool.pytest.ini_options]
addopts = "--showlocals --verbose"
usefixtures = "setup_environ setup_logging"
markers = ["not_44_compatible: marks tests that fail in UCS(@school) 4.4"]


[build-system]
requires = ["poetry-core", "pytest-runner"]
build-backend = "poetry.core.masonry.api"
